--- a/natigttaltathanwy.html
+++ b/natigttaltathanwy.html
@@ -132,7 +132,7 @@
   </div>
 
   <script>
-    const API_URL = "https://script.google.com/macros/s/AKfycbxCSW1gKxvJ3nvLWw4K1SspMTrwq8BWZAZWBUhwebmPfUS5AIZkoypIdo5nPhZyINM/exec";
+    const API_URL = "https://script.google.com/macros/s/AKfycbx_XvqHzHDfhUMURsHK7Z9hvmd4EhQrjbrdGOUxZsjIb8m-ekz5tBAL5NO4NFyV17mA/exec";
     const form = document.getElementById("attendanceForm");
     const loadingScreen = document.getElementById("loadingScreen");
     const resultDiv = document.getElementById("result");
@@ -156,6 +156,7 @@
               <p><strong>🧭 السنتر:</strong> ${data.geo}</p>
               <p><strong>📅امتحان الحصه الاولي:</strong> ${data.week1}</p>
               <p><strong>📅امتحان الحصه الثانيه:</strong> ${data.week2}</p>
+              <p><strong>📅امتحان الحصه الثالثه:</strong> ${data.week3}</p>
             </div>
           `;
         } else {
