--- a/واجب المحاضرة الثالثه 3.html
+++ b/واجب المحاضرة الثالثه 3.html
@@ -230,7 +230,7 @@ button:hover{
 
 <div class="card" id="homeworkCard" style="display:none;">
 <h2> الواجب </h2>
-<h2>  برجاء الانتباه الي ترقيم السؤال مثال( 1-السؤال رقم 50 )شوف السؤال رقم( 50 )في المذكرة وابدأ حل السؤال ركز في الترقيم كويس بالتوفيق يابطل ❤️ </h2>
+<h2>  تنبيه هام 🚫 الي ترقيم السؤال مثال( 1-السؤال رقم 50 )شوف السؤال رقم( 50 )في المذكرة وابدأ حل السؤال ركز في الترقيم كويس بالتوفيق يابطل ❤️ </h2>
 <div class="question-container" id="homeworkForm"></div>
 <div class="completed-message" id="completedMessage">
   <p>🎉 مبروك! خلصت كل الأسئلة</p>
