--- a/start.html
+++ b/start.html
@@ -150,7 +150,9 @@
   .button-link:nth-child(6) { background: #00bcd4; animation-delay: 1.5s; } /* سماوي */
   .button-link:nth-child(7) { background: #795548; animation-delay: 1.8s; } /* بني */
   .button-link:nth-child(8) { background: #ff5722; animation-delay: 2.1s; } /* برتقالي محمر */
-  
+  .button-link:nth-child(8) { background: #800080; animation-delay: 2.1s;/* موف */
+}
+
   @keyframes pulse {
     0%, 100% { box-shadow: 0 0 12px rgba(255,255,255,0.3); }
     50% { box-shadow: 0 0 22px rgba(255,255,255,0.6); }
@@ -337,6 +339,7 @@
       <a href="contact.html" class="button-link">اسألنا سؤال 📞</a>
       <a href="shakwy.html" class="button-link">الشكاوي 📣</a>
       <a href="exam.html" class="button-link">امتحاناتنا 📚</a>
+      <a href="الورشة.htm" class="button-link">الورشة لطلاب الصف الثالث الثانوي 🌍</a>
     </nav>
 
     <!-- كارت اليوتيوب -->
