--- a/start.html
+++ b/start.html
@@ -339,7 +339,7 @@
       <a href="contact.html" class="button-link">اسألنا سؤال 📞</a>
       <a href="shakwy.html" class="button-link">الشكاوي 📣</a>
       <a href="exam.html" class="button-link">امتحاناتنا 📚</a>
-      <a href="الورشة.html" class="button-link">الورشة لطلاب الصف الثالث الثانوي 🌍</a>
+      <a href="https://www.mrfaisal.net/%D8%A7%D9%84%D9%88%D8%B1%D8%B4%D8%A9" class="button-link">🛠️الورشة لطلاب الصف الثالث الثانوي 🌍</a>
     </nav>
 
     <!-- كارت اليوتيوب -->
