--- a/start.html
+++ b/start.html
@@ -331,14 +331,14 @@
 
     <!-- أزرار التنقل -->
     <nav class="buttons" aria-label="روابط الموقع">
-      <a href="cors.html" class="button-link">منصتنا التعليمية 🏫</a>
-      <a href="motaba.html" class="button-link">المتابعة 📱</a>
-      <a href="moayed.html" class="button-link">مواعيدنا ⏰</a>
-      <a href="hw.html" class="button-link">الواجبات 📝</a>
-      <a href="track.html" class="button-link">اشتري من عندنا 🛒</a>
-      <a href="contact.html" class="button-link">اسألنا سؤال 📞</a>
-      <a href="shakwy.html" class="button-link">الشكاوي 📣</a>
-      <a href="exam.html" class="button-link">امتحاناتنا 📚</a>
+      <a href="https://www.mrfaisal.net/cors" class="button-link">منصتنا التعليمية 🏫</a>
+      <a href="https://www.mrfaisal.net/motaba" class="button-link">المتابعة 📱</a>
+      <a href="https://www.mrfaisal.net/moayed" class="button-link">مواعيدنا ⏰</a>
+      <a href="https://www.mrfaisal.net/hw" class="button-link">الواجبات 📝</a>
+      <a href="https://www.mrfaisal.net/track" class="button-link">اشتري من عندنا 🛒</a>
+      <a href="https://www.mrfaisal.net/contact" class="button-link">اسألنا سؤال 📞</a>
+      <a href="https://www.mrfaisal.net/shakwy" class="button-link">الشكاوي 📣</a>
+      <a href="https://www.mrfaisal.net/exam" class="button-link">امتحاناتنا 📚</a>
       <a href="https://www.mrfaisal.net/%D8%A7%D9%84%D9%88%D8%B1%D8%B4%D8%A9" class="button-link">🛠️الورشة لطلاب الصف الثالث الثانوي 🌍</a>
     </nav>
 
