--- a/الصفحه-الرئيسية/index.html
+++ b/الصفحه-الرئيسية/index.html
@@ -739,35 +739,35 @@
       <p>نحو تعليم جغرافي متميز</p>
     </div>
     <nav class="sidebar-menu">
-      <a href="https://www.mrfaisal.net/cors.html" class="button-link">
+      <a href="https://www.mrfaisal.net/cors" class="button-link">
         <i class="fas fa-school"></i>
         منصتنا التعليمية
       </a>
-      <a href="https://www.mrfaisal.net/motaba.html" class="button-link">
+      <a href="https://www.mrfaisal.net/motaba" class="button-link">
         <i class="fas fa-binoculars"></i>
         المتابعة
       </a>
-      <a href="https://www.mrfaisal.net/moayed.html" class="button-link">
+      <a href="https://www.mrfaisal.net/moayed" class="button-link">
         <i class="fas fa-clock"></i>
         مواعيدنا
       </a>
-      <a href="https://www.mrfaisal.net/hw.html" class="button-link">
+      <a href="https://www.mrfaisal.net/hw" class="button-link">
         <i class="fas fa-tasks"></i>
         الواجبات
       </a>
-      <a href="https://www.mrfaisal.net/track.html" class="button-link">
+      <a href="https://www.mrfaisal.net/track" class="button-link">
         <i class="fas fa-shopping-cart"></i>
         اشتري من عندنا
       </a>
-      <a href="https://www.mrfaisal.net/contact.html" class="button-link">
+      <a href="https://www.mrfaisal.net/contact" class="button-link">
         <i class="fas fa-question-circle"></i>
         اسألنا سؤال
       </a>
-      <a href="https://www.mrfaisal.net/shakwy.html" class="button-link">
+      <a href="https://www.mrfaisal.net/shakwy" class="button-link">
         <i class="fas fa-comment-dots"></i>
         الشكاوي
       </a>
-      <a href="https://www.mrfaisal.net/exam.html" class="button-link">
+      <a href="https://www.mrfaisal.net/exam" class="button-link">
         <i class="fas fa-file-alt"></i>
         امتحاناتنا
       </a>
@@ -856,7 +856,7 @@
       </section>
 
       <!-- زر ابدأ الرحلة -->
-      <div class="start-journey" onclick="location.href='https://www.mrfaisal.net/start.html'" role="button" tabindex="0" aria-label="ابدأ الرحلة الآن - اضغط هنا">
+      <div class="start-journey" onclick="location.href='https://www.mrfaisal.net/start'" role="button" tabindex="0" aria-label="ابدأ الرحلة الآن - اضغط هنا">
         🚀 ابدأ الرحلة الآن - اضغط هنا
       </div>
       
