--- a/index.html
+++ b/index.html
@@ -741,35 +741,35 @@
       <p>نحو تعليم جغرافي متميز</p>
     </div>
     <nav class="sidebar-menu">
-      <a href="cors.html" class="button-link">
+      <a href="https://www.mrfaisal.net/cors" class="button-link">
         <i class="fas fa-school"></i>
         منصتنا التعليمية
       </a>
-      <a href="motaba.html" class="button-link">
+      <a href="https://www.mrfaisal.net/motaba" class="button-link">
         <i class="fas fa-binoculars"></i>
         المتابعة
       </a>
-      <a href="moayed.html" class="button-link">
+      <a href="https://www.mrfaisal.net/moayed" class="button-link">
         <i class="fas fa-clock"></i>
         مواعيدنا
       </a>
-      <a href="hw.html" class="button-link">
+      <a href="https://www.mrfaisal.net/hw" class="button-link">
         <i class="fas fa-tasks"></i>
         الواجبات
       </a>
-      <a href="track.html" class="button-link">
+      <a href="https://www.mrfaisal.net/track" class="button-link">
         <i class="fas fa-shopping-cart"></i>
         اشتري من عندنا
       </a>
-      <a href="contact.html" class="button-link">
+      <a href="https://www.mrfaisal.net/contact" class="button-link">
         <i class="fas fa-question-circle"></i>
         اسألنا سؤال
       </a>
-      <a href="shakwy.html" class="button-link">
+      <a href="https://www.mrfaisal.net/shakwy" class="button-link">
         <i class="fas fa-comment-dots"></i>
         الشكاوي
       </a>
-      <a href="exam.html" class="button-link">
+      <a href="https://www.mrfaisal.net/exam" class="button-link">
         <i class="fas fa-file-alt"></i>
         امتحاناتنا
       </a>
