--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@
       </section>
 
       <!-- زر ابدأ الرحلة -->
-      <div class="start-journey" onclick="location.href='start.html'" role="button" tabindex="0" aria-label="ابدأ الرحلة الآن - اضغط هنا">
+      <div class="start-journey" onclick="location.href='https://www.mrfaisal.net/start'" role="button" tabindex="0" aria-label="ابدأ الرحلة الآن - اضغط هنا">
         🚀 ابدأ الرحلة الآن - اضغط هنا
       </div>
       
