--- a/moayed.html
+++ b/moayed.html
@@ -143,14 +143,14 @@
 <div class="cards-container">
 
   <!-- كارت تانية ثانوي -->
-  <a href="moayedtanyathanwy.html" target="_blank" class="special-card" style="animation-delay: 0.2s; background: linear-gradient(135deg, #8e44ad, #9b59b6);">
+  <a href="https://www.mrfaisal.net/moayedtanyathanwy" target="_blank" class="special-card" style="animation-delay: 0.2s; background: linear-gradient(135deg, #8e44ad, #9b59b6);">
     <div class="big-number">2</div>
     <div class="emoji">📆</div>
     <div class="text">مواعيد تانية ثانوي</div>
   </a>
 
   <!-- كارت تالتة ثانوي -->
-  <a href="moayedtaltathanwy.html" target="_blank" class="special-card" style="animation-delay: 0.4s; background: linear-gradient(135deg, #2980b9, #3498db);">
+  <a href="https://www.mrfaisal.net/moayedtaltathanwy" target="_blank" class="special-card" style="animation-delay: 0.4s; background: linear-gradient(135deg, #2980b9, #3498db);">
     <div class="big-number">3</div>
     <div class="emoji">🗓️</div>
     <div class="text">مواعيد تالتة ثانوي</div>
