--- a/motaba.html
+++ b/motaba.html
@@ -137,12 +137,12 @@
 
     <!-- الكروت -->
     <div class="cards">
-      <a href="father.html" class="card" target="_blank">
+      <a href="https://www.mrfaisal.net/father" class="card" target="_blank">
         <div class="emoji">👨‍👩‍👧</div>
         <h3>متابعة ولي الأمر</h3>
       </a>
 
-      <a href="talb.html" class="card" target="_blank">
+      <a href="https://www.mrfaisal.net/talb" class="card" target="_blank">
         <div class="emoji">🧑‍🎓</div>
         <h3>متابعة الطالب</h3>
       </a>
