--- a/talb.html
+++ b/talb.html
@@ -223,7 +223,26 @@
         </tr>
       </tbody>
     </table>
-    
+
+    <table id="thirdTable2">
+      <thead>
+        <tr>
+          <th>المحاضرة</th>
+          <th>الامتحان</th>
+          <th>الواجب</th>
+          <th>المطلوب</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>الثالثه</td>
+          <td>من اول الدرس التمهيدي حتي نهاية الاهداف  </td>
+          <td>من صفحة 23 إلى 31</td>
+          <td>   مشاهدة فيديو الواجب +زتونه الاسبوع الثالث </td>
+        </tr>
+      </tbody>
+    </table>
+
     <button id="thirdHomeworkBtn" class="homework-btn" onclick="goToHomework()">اعمل الواجب دلوقتي</button>
 
   </div>
