--- a/talb.html
+++ b/talb.html
@@ -267,6 +267,8 @@
       } else {
         document.getElementById('thirdTable').style.display = 'table';
         document.getElementById('thirdTable2').style.display = 'table';
+
+        document.getElementById('thirdTable3').style.display = 'table';
         document.getElementById('thirdHomeworkBtn').style.display = 'block';
       }
 
