--- a/moayedtanyathanwy.html
+++ b/moayedtanyathanwy.html
@@ -195,12 +195,8 @@
     // السبت
     {name: "يونايتد", day: "السبت", hour: 10, minute: 0, address: "الحضره", emoji: "🏫"},
     {name: "الجامعه", day: "السبت", hour: 16, minute: 0, address: "الساعه", emoji: "🎓"},
-    {name: "الزهراوي", day: "السبت", hour: 19, minute: 30, address: "سيدي بشر عبدالناصر", emoji: "🏫"},
     // الأحد
     {name: "كامبردج", day: "الأحد", hour: 16, minute: 0, address: "سيدي بشر ش المسرح", emoji: "🎒"},
-    {name: "رويال", day: "الأحد", hour: 17, minute: 30, address: "سيدي بشر بحري", emoji: "👑"},
-    {name: "نور السما", day: "الأحد", hour: 20, minute: 0, address: "سيدي بشر الترام", emoji: "🌟"},
-    {name: "ناسا ميامي", day: "الأحد", hour: 19, minute: 0, address: "ميامي خليل حمادة", emoji: "🚀"},
     // الاثنين
     {name: "نيوكامبردج", day: "الاثنين", hour: 15, minute: 30, address: "سيدي بشر شركه الكهرباء", emoji: "📘"},
     // الثلاثاء
@@ -208,11 +204,10 @@
     {name: "القمه", day: "الثلاثاء", hour: 17, minute: 0, address: "السيوف", emoji: "🏆"},
     // الأربعاء
     {name: "القدس", day: "الأربعاء", hour: 14, minute: 30, address: "العوايد", emoji: "🕌"},
-    {name: "الاندلس", day: "الأربعاء", hour: 16, minute: 0, address: "الزوايدة", emoji: "🏛️"},
-    {name: "ستارز", day: "الأربعاء", hour: 18, minute: 0, address: "المندرة امام حسني", emoji: "⭐"},
+    {name: "رويال", day: "الأربعاء", hour: 17, minute: 0, address: "سيدي بشر", emoji: "🏛️"},
+    {name: "ستارز", day: "الأربعاء", hour: 19, minute: 0, address: "المندرة امام حسني", emoji: "⭐"},
     // الجمعة
     {name: "ميامي", day: "الجمعة", hour: 16, minute: 0, address: "ميامي اسفل كوبري 45", emoji: "🌊"},
-    {name: "الرياض السيوف", day: "الجمعة", hour: 18, minute: 0, address: "السيوف", emoji: "⚽"}
   ];
 
   const daysMap = {
