--- a/natigttaltathanwy.html
+++ b/natigttaltathanwy.html
@@ -132,7 +132,7 @@
   </div>
 
   <script>
-    const API_URL = "https://script.google.com/macros/s/AKfycbx_XvqHzHDfhUMURsHK7Z9hvmd4EhQrjbrdGOUxZsjIb8m-ekz5tBAL5NO4NFyV17mA/exec";
+    const API_URL = "https://script.google.com/macros/s/AKfycbxsuv6t0hhdAFqu769UAM2IbF7Cbmk3WQKBezsaQAi-w3JlaZMd9wR5MliLip0w77uM/exec";
     const form = document.getElementById("attendanceForm");
     const loadingScreen = document.getElementById("loadingScreen");
     const resultDiv = document.getElementById("result");
@@ -157,6 +157,7 @@
               <p><strong>📅امتحان الحصه الاولي:</strong> ${data.week1}</p>
               <p><strong>📅امتحان الحصه الثانيه:</strong> ${data.week2}</p>
               <p><strong>📅امتحان الحصه الثالثه:</strong> ${data.week3}</p>
+              <p><strong>📅امتحان الحصه الرابعة:</strong> ${data.week4}</p>
             </div>
           `;
         } else {
