--- a/hdortalta.html
+++ b/hdortalta.html
@@ -132,7 +132,7 @@
   </div>
 
   <script>
-    const API_URL = "https://script.google.com/macros/s/AKfycbw7rI9htRyZWYI3H6gOiqKCXI5tJ8qqmNbCBqNjS8I8r9wLuNiHthv-cuUyWQOkml_Nsw/exec";
+    const API_URL = "https://script.google.com/macros/s/AKfycbzXHVEqggl_0HDrivnXCjTh7L3pLorJ0fGZzP51pOHcqn7j_njJZwtu0hbNRmYyVmwzYw/exec";
     const form = document.getElementById("attendanceForm");
     const loadingScreen = document.getElementById("loadingScreen");
     const resultDiv = document.getElementById("result");
@@ -157,6 +157,7 @@
               <p><strong>📅الحصه الاولي:</strong> ${data.week1}</p>
               <p><strong>📅الحصه الثانيه:</strong> ${data.week2}</p>
               <p><strong>📅الحصه الثالثه:</strong> ${data.week3}</p>
+              <p><strong>📅الحصه الرابعة:</strong> ${data.week4}</p>
             </div>
           `;
         } else {
