--- a/hdortanyasanwy.html
+++ b/hdortanyasanwy.html
@@ -129,7 +129,7 @@
   </div>
 
   <script>
-    const API_URL = "https://script.google.com/macros/s/AKfycbzdGLClJUGovtZbY5UHZ3qQTA--RMfs83EUh87oB1Zt3LbocjI-BKT-C8OkgsLvRD5wDQ/exec";
+    const API_URL = "https://script.google.com/macros/s/AKfycbwTtbhc9rO9FAkPoeHIq3VwI0rkE8lb1j_cRafZdAG6U-GUvoAQiLZ3iis-U_GHh2_rqg/exec";
     const form = document.getElementById("attendanceForm");
     const loadingScreen = document.getElementById("loadingScreen");
     const resultDiv = document.getElementById("result");
@@ -152,7 +152,7 @@
               <p><strong>👦 اسم الطالب:</strong> ${data.name}</p>
               <p><strong>🧭 السنتر:</strong> ${data.geo}</p>
               <p><strong>📅الحصه الاولي:</strong> ${data.week1}</p>
-              <p><strong>📅الحصه الاولي:</strong> ${data.week2}</p>
+              <p><strong>📅الحصه الثانيه:</strong> ${data.week2}</p>
             </div>
           `;
         } else {
