--- a/اختار واجبك.html
+++ b/اختار واجبك.html
@@ -270,7 +270,7 @@
         
         <div class="content">
             <div class="options-grid">
-                <div class="option-card" onclick="window.location.href='https://www.mrfaisal.net/%D9%88%D8%A7%D8%AC%D8%A8%20%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%20%D8%A7%D9%84%D8%A7%D9%88%D9%84%D9%8A%20%D8%AA%D8%A7%D9%84%D8%AA%D9%87.html'">
+                <div class="option-card" onclick="window.location.href='https://www.mrfaisal.net/%D9%88%D8%A7%D8%AC%D8%A8%20%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%20%D8%A7%D9%84%D8%A7%D9%88%D9%84%D9%8A%20%D8%AA%D8%A7%D9%84%D8%AA%D9%87'">
                     <div class="option-icon">
                         <i class="fas fa-book-open"></i>
                     </div>
@@ -279,7 +279,7 @@
                     <button class="option-btn">عرض الواجب</button>
                 </div>
                 
-                <div class="option-card" onclick="window.location.href='https://www.mrfaisal.net/%D9%88%D8%A7%D8%AC%D8%A8%20%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%20%D8%A7%D9%84%D8%AB%D8%A7%D9%86%D9%8A%D8%A9%203.html'">
+                <div class="option-card" onclick="window.location.href='https://www.mrfaisal.net/%D9%88%D8%A7%D8%AC%D8%A8%20%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%20%D8%A7%D9%84%D8%AB%D8%A7%D9%86%D9%8A%D8%A9%203'">
                     <div class="option-icon">
                         <i class="fas fa-chalkboard-teacher"></i>
                     </div>
@@ -287,12 +287,20 @@
                     <p class="option-desc">من صفحة 15 الي 22</p>
                     <button class="option-btn">عرض الواجب</button>
                 </div>
-                <div class="option-card" onclick="window.location.href='https://www.mrfaisal.net/%D9%88%D8%A7%D8%AC%D8%A8%20%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%20%D8%A7%D9%84%D8%AB%D8%A7%D9%84%D8%AB%D9%87%203.html'">
+                <div class="option-card" onclick="window.location.href='https://www.mrfaisal.net/%D9%88%D8%A7%D8%AC%D8%A8%20%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%20%D8%A7%D9%84%D8%AB%D8%A7%D9%84%D8%AB%D9%87%203'">
                     <div class="option-icon">
                         <i class="fas fa-chalkboard-teacher"></i>
                     </div>
                     <h2 class="option-title">واجب المحاضرة الثالثه</h2>
                     <p class="option-desc">  من 23 الي 31  </p>
+                    <button class="option-btn">عرض الواجب</button>
+                </div>
+                    <div class="option-card" onclick="window.location.href='https://www.mrfaisal.net/%D9%88%D8%A7%D8%AC%D8%A8%20%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%20%D8%A7%D9%84%D8%B1%D8%A7%D8%A8%D8%B9%D8%A9%203'">
+                    <div class="option-icon">
+                        <i class="fas fa-chalkboard-teacher"></i>
+                    </div>
+                    <h2 class="option-title">واجب المحاضرة الرابعة</h2>
+                    <p class="option-desc">  من 32 الي 43  </p>
                     <button class="option-btn">عرض الواجب</button>
                 </div>
             </div>
