--- a/start.html
+++ b/start.html
@@ -312,11 +312,11 @@
   <main role="main" aria-label="موقع مستر فيصل">
 
     <!-- أحدث فيديو -->
-    <section class="card-slide" aria-label="أحدث فيديو على قناتنا">
-      <img src="https://files.catbox.moe/9vc0s5.jpg" alt="صورة فيديو تعريفي" />
+    <section class="card-slide" aria-label="برنامج أصل الحكاية مع فيصولة   ">
+      <img src="https://adelabdulrahman026-byte.github.io/dashboard/%D8%A7%D8%B5%D9%84-%D8%A7%D9%84%D8%AD%D9%83%D8%A7%D9%8A%D8%A9-2.jpg" alt="صورة فيديو تعريفي" />
       <div class="slide-overlay">
-        <h2>أحدث فيديو على قناتنا</h2>
-        <a href="https://youtu.be/Qvgq0KsjhGY" target="_blank" rel="noopener" aria-label="شاهد الآن المحاضرة التعريفية" class="slide-overlay-link">شاهد الآن ▶</a>
+        <h2>  برنامج أصل الحكاية مع فيصولة </h2>
+        <a href="https://youtube.com/playlist?list=PL8Efm-d8SSIFNFDO04cjzJSJJX_5aaFVT&si=HkOUldB5gMEP0tGb" target="_blank" rel="noopener" aria-label="شاهد الآن  " class="slide-overlay-link">شاهد الآن ▶</a>
       </div>
     </section>
 
